scroll fix on mobile.

--- a/app/sass/_responsive.scss
+++ b/app/sass/_responsive.scss
@@ -23,6 +23,12 @@
      width: 100px;
      margin-top:10px;
     }
-    
+
+} 
+
+  .card{
+      overflow-y: scroll;
   }
+
+  
 } 
